syntax = "proto3";

package careeros.aicore.v1;

import "common.proto";

service AICoreService {
  rpc ExecuteFlow(ExecuteFlowRequest) returns (ExecuteFlowResponse);
  rpc GetFlowUsage(GetFlowUsageRequest) returns (GetFlowUsageResponse);
  rpc ChatMentor(ChatMentorRequest) returns (ChatMentorResponse);
}

message ExecuteFlowRequest {
  careeros.common.v1.RequestMeta meta = 1;
  string flow_name = 2;
  string flow_version = 3;
  string input_json = 4;
}

message ExecuteFlowResponse {
  string execution_id = 1;
  string status = 2;
  string output_json = 3;
  double confidence = 4;
}

message GetFlowUsageRequest {
  careeros.common.v1.RequestMeta meta = 1;
  string user_id = 2;
}

message GetFlowUsageResponse {
  int64 requests_count = 1;
  int64 prompt_tokens = 2;
  int64 completion_tokens = 3;
  double total_cost_usd = 4;
}

message ChatMessage {
  string role = 1;
  string content = 2;
}

message ChatMentorRequest {
  careeros.common.v1.RequestMeta meta = 1;
  string user_id = 2;
  string tenant_id = 3;
  string mode = 4;
  repeated ChatMessage messages = 5;
}

message ChatMentorResponse {
  string message = 1;
  string model = 2;
  int32 prompt_tokens = 3;
  int32 completion_tokens = 4;
}
